# internal/handlers/auth/me.go
@@ -8,27 +8,26 @@ import (
 
 type MeResponse struct {
 	UserID uint   `json:"user_id"`
-	Email  string `json:"email"`
+	Login  string `json:"login"`
 	Role   string `json:"role"`
 }
 
 // Me godoc
 // @Summary Проверка авторизации
-// @Description Возвращает данные пользователя из JWT токена
+// @Description Возвращает user_id и role из JWT
 // @Tags auth
 // @Produce json
-// @Security BearerAuth
 // @Success 200 {object} MeResponse
 // @Failure 401 {object} map[string]string
 // @Router /auth/me [get]
 func Me(c *gin.Context) {
 	userID := c.GetUint("user_id")
-	email := c.GetString("user_email")
-	role := c.GetString("user_role")
+	login := c.GetString("login")
+	role := c.GetString("role")
 
 	c.JSON(http.StatusOK, MeResponse{
 		UserID: userID,
-		Email:  email,
+		Login:  login,
 		Role:   role,
 	})
 }
